--- a/StudentManagementWebApp/Views/Shared/_Layout1.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_Layout1.cshtml
@@ -113,7 +113,7 @@
     <script src="~/Scripts/jquery.signalR-2.4.3.min.js"></script>
     <script src="~/signalr/hubs"></script>
     <!--Bắt buộc phải có để load script cho SignalR Hub-->
-    @RenderSection("scripts", required: false);
+    @RenderSection("scripts", required: false)
 </body>
     
 </html>
