--- a/StudentManagementWebApp/Views/Shared/_SideBar.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_SideBar.cshtml
@@ -12,7 +12,7 @@
         <hr class="sidebar-divider my-0">
 
         <!-- Nav Item - Dashboard -->
-        <li class="nav-item active">
+        <li class="nav-item">
             <a class="nav-link" href="~/">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Trang Chủ</span>
