--- a/StudentManagementWebApp/Views/Student/CourseDetails.cshtml
+++ b/StudentManagementWebApp/Views/Student/CourseDetails.cshtml
@@ -3,6 +3,17 @@
 @{
     ViewBag.Title = "Course Details";
 }
+<div class="breadcrumb">
+    <div class="breadcrumb-item">
+        @Html.ActionLink("Danh sách sinh viên", "Index")
+    </div>
+    <div class="breadcrumb-item">
+        @Html.ActionLink("Thông tin sinh viên", "Details", new { id = ViewBag.Id })
+    </div>
+    <div class="breadcrumb-item">
+        <a href="#">Thông tin học phần</a>
+    </div>
+</div>
 
 <h2 class="text-center" style="color: #384289;">Danh sách các môn học đã đăng ký</h2>
 <div class="container">
