--- a/StudentManagementWebApp/Views/Student/Edit.cshtml
+++ b/StudentManagementWebApp/Views/Student/Edit.cshtml
@@ -3,17 +3,22 @@
 @{
     ViewBag.Title = "Edit";
 }
+<div class="breadcrumb">
+    <div class="breadcrumb-item">
+        @Html.ActionLink("Danh sách sinh viên", "Index")
+    </div>
+    <div class="breadcrumb-item">
+        <a href="#">Chỉnh sửa</a>
+    </div>
+</div>
+<div class="container-fluid justify-content-center align-content-center">
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
 
-<h2>Edit</h2>
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <h4>Sinh Viên</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        <h4 class="text-center col-md-10">Sửa đổi thông tin</h4>
+        <hr class="col-md-10 float-left">
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
@@ -55,16 +60,15 @@
                 @Html.ValidationMessageFor(model => model.CourseId, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <hr class="col-md-10 float-left">
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Lưu" class="btn btn-outline-primary btn-block" />
             </div>
         </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    }
 </div>
+
+
 
