--- a/StudentManagementWebApp/Views/Shared/_ConfirmForm.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_ConfirmForm.cshtml
@@ -1,18 +1,18 @@
 ﻿<div id="confirmModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="confirmModalTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="confirmModalTitle">Modal title</h5>
+            <div class="modal-header" style="color: #000">
+                <h5 class="modal-title" id="confirmModalTitle">Hệ Thống</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                <p>Modal body text goes here.</p>
+            <div class="modal-body" style="color: #000">
+                <p>Bạn có chắc chắn muốn thực hiện hành động này chưa ?</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" aria-label="Save">Save changes</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button id="submitBtn" type="button" class="btn btn-primary" aria-label="Save">Lưu</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
             </div>
         </div>
     </div>
