--- a/StudentManagementWebApp/Views/Student/Create.cshtml
+++ b/StudentManagementWebApp/Views/Student/Create.cshtml
@@ -3,16 +3,22 @@
 @{
     ViewBag.Title = "Create";
 }
+<div class="breadcrumb">
+    <div class="breadcrumb-item">
+        @Html.ActionLink("Danh sách sinh viên", "Index")
+    </div>
+    <div class="breadcrumb-item">
+        <a href="#">Thêm Sinh Viên</a>
+    </div>
+</div>
 
-<h2>Create</h2>
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Student", FormMethod.Post, htmlAttributes: new { @id = "Form" }))
 {
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Sinh Viên</h4>
-    <hr />
+    <h4>Thêm Sinh Viên Mới</h4>
+    <hr class="col-md-10 float-left">
     @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })*@
     @Html.AntiForgeryToken()
     <div class="form-group">
@@ -54,10 +60,13 @@
             @Html.ValidationMessageFor(model => model.CourseId, "", new { @class = "text-danger" })
         </div>
     </div>
+    <hr class="col-md-10 float-left">
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-outline-primary btn-block" />
+            @*<input type="submit" value="Create" class="btn btn-outline-primary btn-block" />*@
+            <input type="button" value="Tạo mới" data-toggle="modal" data-target="#confirmModal" aria-labelledby="Save" class="btn btn-outline-primary btn-block" />
+
         </div>
     </div>
 </div>
