--- a/StudentManagementWebApp/Content/Customs/Custom_1.razor.css
+++ b/StudentManagementWebApp/Content/Customs/Custom_1.razor.css
@@ -27,7 +27,22 @@
     }
 
 /*Add vào sau*/
-#content-wrapper {
+#wrapper #content-wrapper {
     font-family: Tahoma;
     color: #000;
+    background-color: transparent !important;
 }
+    #wrapper #content-wrapper::after {
+        background: url(/Assets/anony.png) !important;
+        background-repeat: no-repeat !important;
+        background-position: center !important;
+        background-size: 80vh !important;       
+        content: "";
+        top: 0px;
+        right: 0px;
+        bottom: 0px;
+        left: 220px;
+        opacity: 0.15;
+        z-index: -100;
+        position: absolute;
+    }
