--- a/StudentManagementWebApp/Views/Authentication/Login.cshtml
+++ b/StudentManagementWebApp/Views/Authentication/Login.cshtml
@@ -27,7 +27,7 @@
             <span class="error animated tada" id="msg">@ViewBag.error</span>
             <form name="form1" class="box" onsubmit="return checkStuff()" method="post" action="@Url.Action("Login","Authentication")">
                 @Html.AntiForgeryToken()
-                <h4><span style="font-size: 24px">Cổng Thông Tin Sinh Viên</span></h4>
+                <h4><span style="font-size: 24px">Hệ Thống Quản Trị Sinh Viên</span></h4>
                 <h5>Đăng Nhập Hệ Thống</h5>
                 <input type="text" name="username" placeholder="Username" autocomplete="off" required>
                 <i class="typcn typcn-eye" id="eye"></i>
