--- a/StudentManagementWebApp/Views/Shared/_ConfirmForm.cshtml
+++ b/StudentManagementWebApp/Views/Shared/_ConfirmForm.cshtml
@@ -11,7 +11,7 @@
                 <p>Bạn có chắc chắn muốn thực hiện hành động này chưa ?</p>
             </div>
             <div class="modal-footer">
-                <button id="submitBtn" type="button" class="btn btn-primary" aria-label="Save">Lưu</button>
+                <button id="submitBtn" type="button" class="btn btn-primary" aria-label="Save">Ok</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
             </div>
         </div>
